# LLDP-Test-Tool

./: .gitignore  README.md  pyproject.toml
drivers/: README.md
scripts/: bootstrap.ps1  build_release.ps1  run.ps1
src/lldp_tool/: __init__.py  __main__.py  adapters.py  gui.py  hexutil.py  input_packets.py  models.py  npcap.py  packets.py  periodic.py  scapy_io.py
tests/: test_adapters.py  test_entrypoint.py  test_gui_format.py  test_gui_periodic_runtime.py  test_hexutil.py  test_input_packets.py  test_npcap.py  test_packets.py  test_periodic.py  test_release_script.py  test_scapy_io.py
