[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "lldp-byte-tool"
version = "0.1.0"
description = "Japanese GUI tool for sending and receiving LLDP bytes on Windows."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "scapy>=2.6.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
]
build = [
    "pyinstaller>=6.10",
]

[project.scripts]
lldp-byte-tool = "lldp_tool.gui:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
